crates/aura-app/tests/ui_signals/authoritative_channel_ref_constructor_private.stderr
error[E0624]: associated function `new` is private
 --> tests/ui_signals/authoritative_channel_ref_constructor_private.rs:8:38
  |
8 |     let _ = AuthoritativeChannelRef::new(channel_id, context_id);
  |                                      ^^^ private associated function
  |
 ::: src/workflows/messaging.rs
  |
  |     pub(crate) fn new(channel_id: ChannelId, context_id: ContextId) -> Self {
  |     ----------------------------------------------------------------------- private associated function defined here
